# jarvis-standards

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  DEVELOPMENT_PROCESS.md  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  pr-base-staleness.yml  trusted-sandbox-ci.yml
.jarvis-hooks/: pre-push
WORKFLOWS/: air_direct_edit.md  claude_code_sandbox.md  copilot_cloud_agent.md  emergency_hotfix.md  forge_pipeline.md  jarvis_native_agent.md  multi_repo_refactor.md
contracts/: ask_surfaces.v1.json
docs/: ASK_SOURCE_OF_TRUTH.md  AUTHENTICATION_TWO_TOKEN_PATTERN.md  CLAUDE_MD_GUIDE.md  DATABASE_MIGRATIONS.md  DEPLOYMENT.md  DOCUMENT_UPLOADS.md  LOGGING.md  SPEC_AUTHORING.md
docs/adr/: ADR-0001-adopt-docker-deployment.md  ADR-0002-state-native-compute-containerized.md  ADR-0003-progressive-secrets-management.md  ADR-0004-alpha5-execution-standards.md  ADR-0005-adopt-multi-writer-coordination-model.md  ADR-0006-orbstack-default-container-runtime.md  ADR-0007-pull-based-gitops-sync.md  ADR-0008-structlog-as-python-logging-standard.md  ADR-0009-ruff-s-static-security-standard.md  ADR-0010-cross-repo-runtime-bridge-contract.md  ADR-0011-agent-spec-standard.md  ADR-0011-kill-switch-failure-semantics.md  ADR-0011-spec-md-format-standard.md  ADR-0012-project-phase-pipeline-data-model.md  ADR-0013-forge-autonomous-execution-and-merge-gate.md  ADR-0014-mattermost-ops-chatops-surface.md  ADR-0014-operator-decision-artifacts.md  ADR-0015-mattermost-ops-chatops-surface.md  ADR-0016-medical-scoring-engine.md  ADR-0017-medical-phi-residency.md  ADR-0019-discovery-first-context-protocol.md  ADR-0020-anti-slop-engineering-quality-standard.md  ADR-0021-model-fit-check.md  ADR-0021-smithy-per-repo-test-environment-model.md  ADR-0022-smithy-agent-spec-driven-authoring-orchestration.md  ADR-0023-alpha-vault-document-upload-standard.md  ADR-0024-ask-source-of-truth-boundaries.md  ADR-0025-at0-auto-update-agent-authority-model.md  README.md  TEMPLATE.md
docs/codegen/: CODEGEN_RULES.md  CODEGEN_RULES_FSI.md  CODEGEN_RULES_HIPAA.md
docs/designs/: MATTERMOST_INTEGRATION_SPEC.md  RLSContext_dataclass_design.md
docs/handoffs/: 2026-05-05-td-x38-ruleset-rollout.md  2026-05-05-td-x38-ruleset-status-checks-backfill.md
docs/policy/: CI_CONVENTIONS.md  RULESET_CANONICAL.md  TRUSTED_SANDBOX_CI.md
docs/proposals/: PROPOSAL-drift-detection.md  PROPOSAL-platform-monorepo-consolidation.md
docs/templates/: AGENT_SPEC_TEMPLATE.md
identity/: README.md
identity/services/: council_public.pem
jarvis_standards/: __init__.py  registry.py
jarvis_standards.egg-info/: PKG-INFO  SOURCES.txt
jarvis_standards/adapters/: __init__.py
jarvis_standards/checks/: __init__.py  model_fit.py
ports/: __init__.py  alpha.py  exceptions.py  llm.py  model_fit.py
registries/: model_catalog.yaml  node_capabilities.yaml
scripts/: README.md  install_hooks.sh  install_pre_commit.sh  install_sync_daemon.sh  jarvis_branch.sh  jarvis_install.sh  jarvis_pr  propagate.config  propagate_scripts.sh  sync_check.sh  uninstall_sync_daemon.sh
scripts/_templates/: .pre-commit-config.yaml  .secrets.baseline  README.md  check_sync.template.sh  commit_core.template.sh  ruff_detect.template.sh  sync_daemon.sh
scripts/test/: test_ci_template.sh  test_commit_msg_hook.sh  (+3 more)
shell/: prompt.zsh
tests/: test_ask_source_of_truth.py  test_model_fit_estimator.py  test_model_fit_port.py  test_model_fit_property.py  test_ports_protocol.py
(+11 files in other folders)
