[project]
name = "jarvis-standards"
version = "0.1.0"
description = "Cross-repo conventions, ADRs, and canonical port interfaces for JARVIS modules."
requires-python = ">=3.12"
# PyYAML backs the model-fit check's node/model registries (ADR-0021). It is the
# only runtime dependency the standards repo carries; everything else is stdlib.
dependencies = [
    "pyyaml>=6",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ports*", "jarvis_standards*"]

# ── Type-checking ─────────────────────────────────────────────────────
# files covers both the interface package (ports) and the runtime package
# (jarvis_standards); without the latter, --strict would silently never check
# the model-fit check (ADR-0021, fix #1 — correctness).
[tool.mypy]
strict = true
python_version = "3.12"
files = ["ports", "jarvis_standards"]
warn_unused_configs = true

# ── Lint / format ─────────────────────────────────────────────────────
[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
# Conservative starting set — protocol modules are interface-only and
# tests only check shape, so we don't need every PYL rule firing.
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# Tests deliberately use getattr with constant names for symmetry with
# the dynamic-iteration loops in the same file (lines 18-21, 30-33).
"tests/*" = ["B009"]

# ── Tests ─────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

# ── Dev deps (PEP 735) ────────────────────────────────────────────────
# Picked up by the JARVIS substrate CI workflow (TD-X35: `uv sync --group dev`
# fires automatically when this section is present).
[dependency-groups]
dev = [
    "mypy>=1.11",
    "pytest>=8",
    "hypothesis>=6",
    "types-PyYAML>=6",
]
